--- a/sass/main.sass
+++ b/sass/main.sass
@@ -57,6 +57,7 @@
 @import "modules/header"
 @import "modules/menu"
 @import "modules/text-intro"
+@import "modules/slider"
 @import "modules/footer"
 
 // -------------------------------------
