--- a/sass/modules/_global.sass
+++ b/sass/modules/_global.sass
@@ -19,27 +19,8 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic)
 @import url(http://fonts.googleapis.com/css?family=Indie+Flower)
 @import url(http://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700,300italic,400italic,600italic,700italic)
-@import "compass/support"
 
 
-@mixin keyframes($name, $deprecated-prefixes...) 
-	$warned: warn-about-useless-prefix-arguments($deprecated-prefixes...)
-	@include with-each-prefix(css-animation, $animation-support-threshold) 
-		@if $current-prefix == -moz 
-			@-moz-keyframes #{$name} 
-				@content
-		@if $current-prefix == -webkit 
-			@-webkit-keyframes #{$name} 
-				@content
-		@if $current-prefix == -o 
-			@-o-keyframes #{$name} 
-				@content;
-		@if $current-prefix == -ms 
-			@-ms-keyframes #{$name} 
-				@content
-		@if $current-prefix == null 
-			@keyframes #{$name} 
-				@content
 
 +keyframes(color1)
 	0%
@@ -54,7 +35,7 @@
 		background-color: rgba(93,214,150,0.1)
 
 
-@-webkit-keyframes color2 
++keyframes(color2)
 	0%     
 		background-color: rgba(206,98,19,0.1) 
 	25%     
@@ -66,44 +47,7 @@
 	100%   
 		background-color: rgba(206,98,19,0.1) 
 	
-@-moz-keyframes color2 
-	0%     
-		background-color: rgba(206,98,19,0.1) 
-	25%     
-		background-color: rgba(206,98,19,0.1) 
-	50%   
-		background-color: rgba(206,98,19,0.3)  
-	75%     
-		background-color: rgba(206,98,19,0.1) 
-	100%   
-		background-color: rgba(206,98,19,0.1) 
-	
-@-o-keyframes color2 
-	0%     
-		background-color: rgba(206,98,19,0.1) 
-	25%     
-		background-color: rgba(206,98,19,0.1) 
-	50%   
-		background-color: rgba(206,98,19,0.3) 
-	75%     
-		background-color: rgba(206,98,19,0.1) 
-	100%   
-		background-color: rgba(206,98,19,0.1) 
-	
-@keyframes color2 
-	0%     
-		background-color: rgba(206,98,19,0.1) 
-	25%     
-		background-color: rgba(206,98,19,0.1) 
-	50%   
-		background-color: rgba(206,98,19,0.3) 
-	75%     
-		background-color: rgba(206,98,19,0.1) 
-	100%   
-		background-color: rgba(206,98,19,0.1) 
-	
-
-@-webkit-keyframes color3 
++keyframes(color3)
 	0%     
 		background-color: rgba(166,59,162,0.1) 
 	25%     
@@ -113,43 +57,7 @@
 	75%     
 		background-color: rgba(166,59,162,0.1) 
 	100%   
-		background-color: rgba(166,59,162,0.1) 
-	
-@-moz-keyframes color3 
-	0%     
-		background-color: rgba(166,59,162,0.1) 
-	25%     
-		background-color: rgba(166,59,162,0.1) 
-	50%   
-		background-color: rgba(166,59,162,0.3) 
-	75%     
-		background-color: rgba(166,59,162,0.1) 
-	100%   
-		background-color: rgba(166,59,162,0.1) 
-	
-@-o-keyframes color3 
-	0%   
-		background-color: rgba(166,59,162,0.1) 
-	25%   
-		background-color: rgba(166,59,162,0.1) 
-	50%   
-		background-color: rgba(166,59,162,0.3) 
-	75%   
-		background-color: rgba(166,59,162,0.1) 
-	100%   
-		background-color: rgba(166,59,162,0.1) 
-
-@keyframes color3 
-	0%   
-		background-color: rgba(166,59,162,0.1) 
-	25%   
-		background-color: rgba(166,59,162,0.1) 
-	50%   
-		background-color: rgba(166,59,162,0.3) 
-	75%   
-		background-color: rgba(166,59,162,0.1) 
-	100%   
-		background-color: rgba(166,59,162,0.1) 
+		background-color: rgba(166,59,162,0.1)
 
 
 h2 
