--- a/sass/modules/_header.sass
+++ b/sass/modules/_header.sass
@@ -70,10 +70,7 @@
 			position: relative
 			&:first-child
 				width: 29.33%
-				-webkit-animation: color1 5s infinite ease
-				-moz-animation: color1 5s infinite ease
-				-o-animation: color1 5s infinite ease
-				animation: color1 5s infinite ease
+				+animation(color1 5s infinite ease)
 			h2
 				text-transform: uppercase
 				margin-bottom: 20px
@@ -96,10 +93,7 @@
 		.title
 			padding: 0
 			h2
-				-webkit-animation: color2 4s infinite ease
-				-moz-animation: color2 4s infinite ease
-				-o-animation: color2 4s infinite ease
-				animation: color2 4s infinite ease
+				+animation(color2 4s infinite ease)
 				display: block
 				line-height: 94px
 				height: 50%
@@ -108,10 +102,7 @@
 				strong
 					display: block
 			p
-				-webkit-animation: color3 6s infinite ease
-				-moz-animation: color3 6s infinite ease
-				-o-animation: color3 6s infinite ease
-				animation: color3 6s infinite ease
+				+animation(color3 6s infinite ease)
 				height: 40%
 				color: #ffffff
 				text-align: justify
